fixed image unalignment in modal view

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -53,6 +53,10 @@ body {
 
 .fade-in {
   opacity: 1 !important;
-  /* transform: translateY(-20px) !important; */
   transition: opacity 0.8s ease-in-out;
+}
+
+.react-images__view-image--isModal {
+  display: inline-block;
+  left: 50%;
 }
